# rag

Streamlit-ffmpeg-Test/: README.md  streamlit_app.py
mono-pic/: README.md  VERSION.md  app.py  requirements.txt
mono-pic/src/analyzers/: speech_analyzer.py  text_analyzer.py  vision_analyzer.py
mono-pic/src/core/: config.py  pipeline.py
mono-pic/src/matching/: story_matcher.py
mono-pic/src/processors/: audio_processor.py  file_handler.py  image_processor.py
multimodal-rag/: .gitignore  OPENAI_SETUP.md  README.md  install_dependencies.py  pyproject.toml  streamlit_app.py  test_ngrok.py
multimodal-rag/.streamlit/: config.toml
multimodal-rag/src/: __init__.py  document_processor.py  image_analyzer.py  multimodal_rag.py  pdf_processor.py  utils.py
multimodal-rag/test/: __init__.py  example_usage.py  run_tests.py  test_image_analyzer.py  test_multimodal_rag.py  test_pdf_processor.py  test_utils.py
multimodal-rag/test/sample_data/text/: ai_article.txt  sample_document.txt
multimodal-rag/test_data/: README.md
multimodal-rag/test_data/text/: web_development.txt
simple-rag/: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
simple-rag/src/: main.py  rag_system.py  streamlit_app.py
stt-project/: README.md
stt-project/.streamlit/: config.toml
stt-project/backend/: .dockerignore  .env.example  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.optimized  README.md  STREAMLIT_DEPLOYMENT.md  docker-build.sh  docker-compose.yml  install_ffmpeg.py  main.py  packages.txt  pyproject.toml  requirements.txt  streamlit-docker-compose.yml  streamlit_app.py  test_korean_filename.py
stt-project/backend/.streamlit/: config.toml
stt-project/backend/src/: __init__.py
stt-project/backend/src/api/: __init__.py
stt-project/backend/src/chains/: __init__.py  cleaning_chain.py  llm_factory.py  organize_chain.py  tagging_chain.py
stt-project/backend/src/core/: __init__.py  config.py  state.py  workflow.py
stt-project/backend/src/interfaces/: __init__.py  streamlit_app.py
stt-project/backend/src/processors/: __init__.py  stt_processor.py
stt-project/backend/src/services/: __init__.py  voice_service.py
stt-project/backend/src/utils/: __init__.py  file_utils.py
stt-sample/: packages.txt
stt-sample/.streamlit/: config.toml
stt-sample/backend/: Dockerfile  Makefile  app.py  audio_processor.py  deploy.sh  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  text_processor.py
