[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "", email = "your.email@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "ollama>=0.5.3",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 이 부분이 핵심! 패키지 경로 지정
[tool.hatch.build.targets.wheel]
packages = ["src"]